r17 (24. 06. 2021):
Fixed a crash after alarm went off when "Trade Delay Tracker" is not enabled

r16 (23. 06. 2021):
Added option "Text Scale"
Trade Delay Tracker: Fixed an issue where the tracker could get wonky when related settings were changed mid-game
Trade Delay Tracker: Fixed an issue where delay did not count down when a player went to custody in Control or Anticipation state

r15 (21. 06. 2021):
Added Spanish translation
Brooklyn 10-10: Fixed a startup crash
Breakfast in Tijuana: Achievement "Stolen Valor" also works when you drop-in
Heat Street: Fixed an issue where achievement "Zookeeper" was visible after you drop-in

r14 (18. 06. 2021):
Fixed a crash when First Aid Kit or Doctor Bag were placed and tracking is disabled in EHI

r13 (17. 06. 2021):
Added trackers for The Ukrainian Prisoner Heist
Added option "Show Pager Callback Timers"
Added a lot of area achievements
Murky Station: Added Loot Counter
Reservoir Dogs Heist Day 2: Fixed an issue where achievement "Pinky Swear" appeared to be achieveable when it was not
Trade Delay Tracker: Fixed an issue where timer stopped counting down when AI Trade switched to normal hostage trade

r12 (13. 06. 2021):
Added trackers for Cold Stones custom heist
Added trackers for Scorched Earth custom heist
Laser Tracker: Lasers with the same cycle time will show only once

r11 (12. 06. 2021):
Fixed a crash when game synced used and empty deployable
San Martín Bank: Fixed a crash

r10 (11. 06. 2021):
Added Simplified Chinese translation
Added option "Don't Show Unlocked Achievements"
Added tracker "Drama"
Added tracker "Show Lasers"
Added C4 tracker to most doors and safes
Greatly improved counting of deployables
Trade Delay Tracker: Definitely fixed an issue where time did not count down when AI trade was possible
Fixed an issue where Ammo Shelves did not correctly update the amount
Fixed an issue where some achievement trackers did not respect option "Show Achievement Tracker"